# recsys-challenge-2023-sharechat

./: README.md  generate_predictions.py  pyproject.toml  requirements.txt
Analysis/: NN_1-1-visual.ipynb  NN_1-1.ipynb  general analysis.ipynb
optuna/: Caddyfile  docker-compose.yml
other_experiments/clustering/: README.md  clusteringNumerical.py  clustering_PCA.py  clustering_categorical.py  clustering_categorical_encode.py  clustering_kprototypes.py  clustering_log_loss.py  kmeans_log_loss.py  kmeans_unsupervised.py  knn.py
other_experiments/models/: README.md  cat_weighted_hybrid_creator_aws.py  focal-loss-lightgbm.ipynb  xgb+cat.py  xgb_prediction_generator.py
other_experiments/neural/: anomaly_detection_autoencoder.ipynb  feedforward.ipynb  readme.md
submodels/: cat.py  final_hybrid.py  gen_train_preds_all_days_hist.py  gen_train_preds_all_days_light.py  hist.py  hist_hybrid.py  light.py  light_hybrid.py
utils/: create_parquet.py  create_parquet_encoded.py  postprocessing.py  preprocessing.py  rerank_predictions.py
